Update YouTube videos
For the Sectile updates:
  * source:"YouTube (... channel)" becomes origin:"youtube"
  * type:"youtube" becomes type:"video"
  * adds origin_link_text:"... channel"
  * adds origin_link_url:[channel url]

Other metadata updates:
  * put published after title
  * move video_id up

--- a/fragments/dimensions.toml
+++ b/fragments/dimensions.toml
@@ -8,6 +8,8 @@ day-index = 'calendar'
 # where did the content come from?
 twitter-cackhanded = 'twitter'
 twitter-norms_ps4 = 'twitter'
+youtube-gs = 'youtube'      # my 'Game Shows' channel
+youtube-mnf = 'youtube'     # my YouTube channel
 
 [type]
 # what kind of content is it?
