--- a/source/2020/11/09/horizon-zero-dawn-chapter-15-unearthed.toml
+++ b/source/2020/11/09/horizon-zero-dawn-chapter-15-unearthed.toml
@@ -1,9 +1,11 @@
-video_id = "j2KuYSTBqPM"
-published = 2020-11-09T07:15:01Z
 title = "Horizon Zero Dawn — Chapter 15 — Unearthed"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 15, some things are uncovered.\n\n00:00 Opening titles\n00:21 Recap\n00:54 The City of the Sun — Excavation site\n23:50 The Field of the Fallen\n41:20 Dimmed Bones\n46:45 Back to Meridian\n55:42 Map\n56:00 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191"
+published = 2020-11-09T07:15:01Z
+video_id = "j2KuYSTBqPM"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 15, some things are uncovered.\n\n00:00 Opening titles\n00:21 Recap\n00:54 The City of the Sun — Excavation site\n23:50 The Field of the Fallen\n41:20 Dimmed Bones\n46:45 Back to Meridian\n55:42 Map\n56:00 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
 views = "15"
 likes = "0"
 dislikes = "0"
