--- a/source/2021/01/25/horizon-zero-dawn-chapter-36-shamans-path.toml
+++ b/source/2021/01/25/horizon-zero-dawn-chapter-36-shamans-path.toml
@@ -1,9 +1,11 @@
-video_id = "65wXFIU2nko"
-published = 2021-01-25T08:15:01Z
 title = "Horizon Zero Dawn — Chapter 36 — Shaman's Path"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 36, Aloy walks the Shaman's Path.\n\n0:00 Opening titles\n0:21 Recap\n1:10 The Shaman's Path, part 2\n49:42 Datapoint: Supply SNAFU\n50:46 Datapoint: OMG Blevins\n51:30 Datapoint: Oh-Point-Six\n52:43 Map\n53:01 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191"
+published = 2021-01-25T08:15:01Z
+video_id = "65wXFIU2nko"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 36, Aloy walks the Shaman's Path.\n\n0:00 Opening titles\n0:21 Recap\n1:10 The Shaman's Path, part 2\n49:42 Datapoint: Supply SNAFU\n50:46 Datapoint: OMG Blevins\n51:30 Datapoint: Oh-Point-Six\n52:43 Map\n53:01 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
 views = "11"
 likes = "0"
 dislikes = "0"
