--- a/source/2021/01/29/horizon-zero-dawn-chapter-37-the-spirit.toml
+++ b/source/2021/01/29/horizon-zero-dawn-chapter-37-the-spirit.toml
@@ -1,9 +1,11 @@
-video_id = "dA2KpDzKDVs"
-published = 2021-01-29T08:15:00Z
 title = "Horizon Zero Dawn — Chapter 37 — The Spirit"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 37, Aloy first meets the Sprit of the blue light and\ntakes part in the Banuk hunting trials.\n\n0:00 Opening titles\n0:21 Recap\n1:07 The Shaman's Path, part 3\n21:00 Onwards\n26:20 Snowchants Hunting Ground\n43:20 Onwards\n46:15 Datapoint: Last Request\n47:16 Datapoint: Stage 2 Complete\n48:18 Datapoint: Menu Prank\n49:16 Datapoint: Incommensurable\n50:13 Map\n50:31 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191"
+published = 2021-01-29T08:15:00Z
+video_id = "dA2KpDzKDVs"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 37, Aloy first meets the Sprit of the blue light and\ntakes part in the Banuk hunting trials.\n\n0:00 Opening titles\n0:21 Recap\n1:07 The Shaman's Path, part 3\n21:00 Onwards\n26:20 Snowchants Hunting Ground\n43:20 Onwards\n46:15 Datapoint: Last Request\n47:16 Datapoint: Stage 2 Complete\n48:18 Datapoint: Menu Prank\n49:16 Datapoint: Incommensurable\n50:13 Map\n50:31 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
 views = "17"
 likes = "1"
 dislikes = "0"
