--- a/source/2021/02/15/horizon-zero-dawn-chapter-42-cyan.toml
+++ b/source/2021/02/15/horizon-zero-dawn-chapter-42-cyan.toml
@@ -1,9 +1,11 @@
-video_id = "9mBRiqSf53M"
-published = 2021-02-15T08:15:00Z
 title = "Horizon Zero Dawn — Chapter 42 — CYAN"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 42, Aloy talks to CYAN and comes across a man accused of murder.\n\n0:00 Opening titles\n0:21 The Forge of Winter, concluded\n30:20 Onwards\n42:02 Frontier Justice\n57:22 Map\n57:45 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191"
+published = 2021-02-15T08:15:00Z
+video_id = "9mBRiqSf53M"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 42, Aloy talks to CYAN and comes across a man accused of murder.\n\n0:00 Opening titles\n0:21 The Forge of Winter, concluded\n30:20 Onwards\n42:02 Frontier Justice\n57:22 Map\n57:45 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
 views = "19"
 likes = "0"
 dislikes = "0"
