--- a/source/2021/03/01/horizon-zero-dawn-chapter-46-hunting-grounds.toml
+++ b/source/2021/03/01/horizon-zero-dawn-chapter-46-hunting-grounds.toml
@@ -1,9 +1,11 @@
-video_id = "x0YvJZFwZhc"
-published = 2021-03-01T08:15:03Z
 title = "Horizon Zero Dawn — Chapter 46 — Hunting Grounds"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 46, Aloy visits some hunting grounds.\n\n0:00 Opening titles\n0:21 Recap\n0:58 Sun Furrows Hunting Ground\n12:56 Onwards\n20:55 Gatelands bandit camp\n31:15 Onwards\n44:20 Spurflints Hunting Ground\n54:41 Map\n55:03 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191"
+published = 2021-03-01T08:15:03Z
+video_id = "x0YvJZFwZhc"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 46, Aloy visits some hunting grounds.\n\n0:00 Opening titles\n0:21 Recap\n0:58 Sun Furrows Hunting Ground\n12:56 Onwards\n20:55 Gatelands bandit camp\n31:15 Onwards\n44:20 Spurflints Hunting Ground\n54:41 Map\n55:03 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
 views = "23"
 likes = "0"
 dislikes = "0"
