--- a/source/2021/03/19/horizon-zero-dawn-chapter-51-beneath.toml
+++ b/source/2021/03/19/horizon-zero-dawn-chapter-51-beneath.toml
@@ -1,10 +1,12 @@
-video_id = "GDdqcZYowGk"
-published = 2021-03-19T08:15:30Z
 title = "Horizon Zero Dawn — Chapter 51 — Beneath"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 51, Aloy helps Vanasha get Sun-King Itamen out of Shadow Carja territory.\n\n0:00 Opening titles\n0:21 Recap\n1:28 Queen's Gambit\n17:30 To Curse the Darkness\n26:42 Onwards\n29:55 Redmaw, concluded\n32:40 Onwards\n34:45 Blood on Stone\n44:40 Onwards\n58:48 Map\n59:15 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191"
 thumbnail = "https://i.ytimg.com/vi/GDdqcZYowGk/maxresdefault.jpg"
+published = 2021-03-19T08:15:30Z
+video_id = "GDdqcZYowGk"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 51, Aloy helps Vanasha get Sun-King Itamen out of Shadow Carja territory.\n\n0:00 Opening titles\n0:21 Recap\n1:28 Queen's Gambit\n17:30 To Curse the Darkness\n26:42 Onwards\n29:55 Redmaw, concluded\n32:40 Onwards\n34:45 Blood on Stone\n44:40 Onwards\n58:48 Map\n59:15 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
 views = "10"
 likes = "0"
 dislikes = "0"
