--- a/source/2021/03/26/assassins-creed-ii-chapter-1-famiglia-auditore.toml
+++ b/source/2021/03/26/assassins-creed-ii-chapter-1-famiglia-auditore.toml
@@ -1,10 +1,12 @@
-video_id = "RLUAJTX6Zxg"
-published = 2021-03-26T16:37:25Z
 title = "Assassin's Creed II — Chapter 1 — Famiglia Auditore"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 1, we meet Desmond Miles and some of his ancestors.\n\n0:00 Escaping Abstergo\n12:04 Hideout\n18:48 Boys will be boys\n25:26 You should see the other guy\n27:05 Sibling rivalry\n29:40 Nightcap\n37:00 Paperboy\n47:55 Beat a cheat\n52:05 Petruccio's secret\n55:55 Friend of the family\n1:00:45 Database entries\n1:13:20 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary."
 thumbnail = "https://i.ytimg.com/vi/RLUAJTX6Zxg/maxresdefault.jpg"
+published = 2021-03-26T16:37:25Z
+video_id = "RLUAJTX6Zxg"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 1, we meet Desmond Miles and some of his ancestors.\n\n0:00 Escaping Abstergo\n12:04 Hideout\n18:48 Boys will be boys\n25:26 You should see the other guy\n27:05 Sibling rivalry\n29:40 Nightcap\n37:00 Paperboy\n47:55 Beat a cheat\n52:05 Petruccio's secret\n55:55 Friend of the family\n1:00:45 Database entries\n1:13:20 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n#AssassinsCreedII #AssassinsCreed #EzioCollection"
 views = "21"
 likes = "0"
 dislikes = "0"
