--- a/source/2021/04/09/assassins-creed-ii-chapter-2-accused.toml
+++ b/source/2021/04/09/assassins-creed-ii-chapter-2-accused.toml
@@ -1,9 +1,11 @@
-video_id = "P5wHTbpQe_U"
-published = 2021-04-09T15:33:11Z
 title = "Assassin's Creed II — Chapter 2 — Accused"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 2, Ezio attends a trial.\n\n0:00 Opening titles\n0:22 Special Delivery\n5:40 Jailbird\n15:00 Family heirloom\n23:20 Last man standing\n32:06 Glyph: La Rosa Colta\n37:10 Fitting in\n42:40 Ace up my sleeve\n54:18 Database entries\n58:12 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary."
+published = 2021-04-09T15:33:11Z
+video_id = "P5wHTbpQe_U"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 2, Ezio attends a trial.\n\n0:00 Opening titles\n0:22 Special Delivery\n5:40 Jailbird\n15:00 Family heirloom\n23:20 Last man standing\n32:06 Glyph: La Rosa Colta\n37:10 Fitting in\n42:40 Ace up my sleeve\n54:18 Database entries\n58:12 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n#AssassinsCreedII #AssassinsCreed #EzioCollection"
 thumbnail = "https://i.ytimg.com/vi/P5wHTbpQe_U/maxresdefault.jpg"
 views = "6"
 likes = "0"
