--- a/source/2021/05/14/assassins-creed-ii-chapter-7-pazzi-conspiracy-part-2.toml
+++ b/source/2021/05/14/assassins-creed-ii-chapter-7-pazzi-conspiracy-part-2.toml
@@ -1,9 +1,11 @@
-video_id = "SKzF0O1Fljs"
-published = 2021-05-14T15:52:21Z
 title = "Assassin's Creed II — Chapter 7 — Pazzi Conspiracy (Part 2)"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 7, Ezio tracks down the rest of the Pazzi conspirators.\n\n0:00 Opening titles\n0:22 The Cowl Does Not Make The Monk\n2:10 Glyph: Monte Oliveto Maggiore\n4:10 The Cowl Does Not Make The Monk\n9:40 Behind Closed Doors\n25:40 With Friends Like These\n36:40 Road Trip\n41:50 a pitstop in Monteriggioni\n47:10 Romagna Holiday\n53:54 database entries\n57:01 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary."
+published = 2021-05-14T15:52:21Z
+video_id = "SKzF0O1Fljs"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 7, Ezio tracks down the rest of the Pazzi conspirators.\n\n0:00 Opening titles\n0:22 The Cowl Does Not Make The Monk\n2:10 Glyph: Monte Oliveto Maggiore\n4:10 The Cowl Does Not Make The Monk\n9:40 Behind Closed Doors\n25:40 With Friends Like These\n36:40 Road Trip\n41:50 a pitstop in Monteriggioni\n47:10 Romagna Holiday\n53:54 database entries\n57:01 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n#AssassinsCreedII #AssassinsCreed #EzioCollection"
 thumbnail = "https://i.ytimg.com/vi/SKzF0O1Fljs/maxresdefault.jpg"
 views = "4"
 likes = "0"
