--- a/source/2021/06/04/assassins-creed-ii-chapter-10-emilio-barbarigo.toml
+++ b/source/2021/06/04/assassins-creed-ii-chapter-10-emilio-barbarigo.toml
@@ -1,9 +1,11 @@
-video_id = "9g4lOGFqV9w"
-published = 2021-06-04T15:31:16Z
 title = "Assassin's Creed II — Chapter 10 — Emilio Barbarigo"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 10, Ezio deals with Emilio Barbarigo.\n\n0:00 Opening titles\n0:22 Clothes Make The Man\n12:35 Everything Must Go\n27:00 Birds Of A Feather\n36:40 a pitstop in Monteriggioni\n41:00 If At First You Don't Succeed\n54:25 database entries\n57:41 end card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary."
+published = 2021-06-04T15:31:16Z
+video_id = "9g4lOGFqV9w"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 10, Ezio deals with Emilio Barbarigo.\n\n0:00 Opening titles\n0:22 Clothes Make The Man\n12:35 Everything Must Go\n27:00 Birds Of A Feather\n36:40 a pitstop in Monteriggioni\n41:00 If At First You Don't Succeed\n54:25 database entries\n57:41 end card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n#AssassinsCreedII #AssassinsCreed #EzioCollection"
 thumbnail = "https://i.ytimg.com/vi/9g4lOGFqV9w/default.jpg"
 views = "2"
 likes = "0"
