--- a/source/2020/11/16/horizon-zero-dawn-chapter-17-family.toml
+++ b/source/2020/11/16/horizon-zero-dawn-chapter-17-family.toml
@@ -1,9 +1,11 @@
-video_id = "m_0pa_3wGeE"
-published = 2020-11-16T07:15:01Z
 title = "Horizon Zero Dawn — Chapter 17 — Family"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 17, Aloy helps some people.\n\n0:00 Opening titles\n0:21 Recap\n1:11 Honor the Fallen\n24:45 Towards the Spurflints\n28:08 Collateral\n38:00 Heading north\n46:00 Copper Deeps Tallneck\n58:22 Datapoint: Observer Log US-W-18\n59:10 Map\n59:28 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191"
+published = 2020-11-16T07:15:01Z
+video_id = "m_0pa_3wGeE"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 17, Aloy helps some people.\n\n0:00 Opening titles\n0:21 Recap\n1:11 Honor the Fallen\n24:45 Towards the Spurflints\n28:08 Collateral\n38:00 Heading north\n46:00 Copper Deeps Tallneck\n58:22 Datapoint: Observer Log US-W-18\n59:10 Map\n59:28 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
 views = "13"
 likes = "2"
 dislikes = "0"
