--- a/source/2020/11/23/horizon-zero-dawn-chapter-19-lone-light.toml
+++ b/source/2020/11/23/horizon-zero-dawn-chapter-19-lone-light.toml
@@ -1,9 +1,11 @@
-video_id = "rfVO6xnt12c"
-published = 2020-11-23T08:15:01Z
 title = "Horizon Zero Dawn — Chapter 19 — Lone Light"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 19, Aloy helps Talanah at Lone Light.\n\n0:00 Opening titles\n0:21 Recap\n1:00 Leaving Cauldron Rho\n9:40 Greatrun Hunting Ground\n23:00 To Lone Light\n27:30 Hunters' Blind, part 1\n36:15 Thunderjaw\n38:55 Hunters' Blind, part 2\n48:17 Datapoint: Metal Flower — Mark II (C)\n48:52 Datapoint: The Old Ones\n52:25 Datapoint: The Banuk\n56:32 Map\n56:50 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191"
+published = 2020-11-23T08:15:01Z
+video_id = "rfVO6xnt12c"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 19, Aloy helps Talanah at Lone Light.\n\n0:00 Opening titles\n0:21 Recap\n1:00 Leaving Cauldron Rho\n9:40 Greatrun Hunting Ground\n23:00 To Lone Light\n27:30 Hunters' Blind, part 1\n36:15 Thunderjaw\n38:55 Hunters' Blind, part 2\n48:17 Datapoint: Metal Flower — Mark II (C)\n48:52 Datapoint: The Old Ones\n52:25 Datapoint: The Banuk\n56:32 Map\n56:50 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
 views = "21"
 likes = "0"
 dislikes = "0"
