--- a/source/2020/12/11/horizon-zero-dawn-chapter-24-prisoners.toml
+++ b/source/2020/12/11/horizon-zero-dawn-chapter-24-prisoners.toml
@@ -1,9 +1,11 @@
-video_id = "6F11Ua8RcW8"
-published = 2020-12-11T08:15:00Z
 title = "Horizon Zero Dawn — Chapter 24 — Prisoners"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 24, Aloy tracks down more escaped prisoners.\n\n0:00 Opening titles\n0:21 Recap\n0:52 Onward\n17:40 Sunstone Rock, Rasgrund\n23:28 Onward\n32:30 Banuk artifact: I Cannot Confess\n34:28 Onward\n44:00 Sunstone Rock, Gavan\n55:03 Datapoint: Banuk artifact: I Cannot Confess\n55:40 Datapoint: The Nora\n59:21 Map\n59:39 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191"
+published = 2020-12-11T08:15:00Z
+video_id = "6F11Ua8RcW8"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 24, Aloy tracks down more escaped prisoners.\n\n0:00 Opening titles\n0:21 Recap\n0:52 Onward\n17:40 Sunstone Rock, Rasgrund\n23:28 Onward\n32:30 Banuk artifact: I Cannot Confess\n34:28 Onward\n44:00 Sunstone Rock, Gavan\n55:03 Datapoint: Banuk artifact: I Cannot Confess\n55:40 Datapoint: The Nora\n59:21 Map\n59:39 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
 views = "7"
 likes = "0"
 dislikes = "0"
