--- a/source/2020/12/21/horizon-zero-dawn-chapter-27-xi.toml
+++ b/source/2020/12/21/horizon-zero-dawn-chapter-27-xi.toml
@@ -1,9 +1,11 @@
-video_id = "fUXBS-aVJ0A"
-published = 2020-12-21T08:15:00Z
 title = "Horizon Zero Dawn — Chapter 27 — Xi"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 27, Aloy delves into a third Cauldron.\n\n0:00 Opening titles\n0:21 Caulron Xi\n1:04:28 Datapoint: M/Theta: Core Log 893V\n1:05:09 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191"
+published = 2020-12-21T08:15:00Z
+video_id = "fUXBS-aVJ0A"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 27, Aloy delves into a third Cauldron.\n\n0:00 Opening titles\n0:21 Caulron Xi\n1:04:28 Datapoint: M/Theta: Core Log 893V\n1:05:09 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
 views = "8"
 likes = "0"
 dislikes = "0"
