--- a/source/2021/02/08/horizon-zero-dawn-chapter-40-thunders-drum.toml
+++ b/source/2021/02/08/horizon-zero-dawn-chapter-40-thunders-drum.toml
@@ -1,9 +1,11 @@
-video_id = "abbbOHqefXI"
-published = 2021-02-08T08:15:00Z
 title = "Horizon Zero Dawn — Chapter 40 — Thunder's Drum"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 40, Aloy, Aratak, and Ourea venture into Thunder's Drum to rescue the spirit from the Daemon.\n\n0:00 Opening titles\n0:21 Recap\n1:14 Onwards\n19:33 Longnotch\n21:00 Varga (Geared Up)\n23:45 Gildun\n24:45 Firebreak\n1:12:40 Datapoint: Kenny's Homecoming\n1:14:02 Datapoint: That Kiss\n1:15:21 Datapoint: Incident Report 363-7\n1:17:45 Datapoint: Holo Redux\n1:18:33 Map\n1:18:51 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191"
+published = 2021-02-08T08:15:00Z
+video_id = "abbbOHqefXI"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 40, Aloy, Aratak, and Ourea venture into Thunder's Drum to rescue the spirit from the Daemon.\n\n0:00 Opening titles\n0:21 Recap\n1:14 Onwards\n19:33 Longnotch\n21:00 Varga (Geared Up)\n23:45 Gildun\n24:45 Firebreak\n1:12:40 Datapoint: Kenny's Homecoming\n1:14:02 Datapoint: That Kiss\n1:15:21 Datapoint: Incident Report 363-7\n1:17:45 Datapoint: Holo Redux\n1:18:33 Map\n1:18:51 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
 views = "12"
 likes = "0"
 dislikes = "0"
