--- a/source/2021/03/05/horizon-zero-dawn-chapter-47-redmaw.toml
+++ b/source/2021/03/05/horizon-zero-dawn-chapter-47-redmaw.toml
@@ -1,10 +1,12 @@
-video_id = "sUNE52OKP-A"
-published = 2021-03-05T08:15:04Z
 title = "Horizon Zero Dawn — Chapter 47 — Redmaw"
-type = "youtube"
-source = "YouTube (Game Shows channel)"
-description = "In Chapter 47, Aloy learns Talanah has gone after Redmaw alone.\n\n0:00 Opening titles\n0:21 Recap\n1:23 Onwards\n14:00 Honor the Fallen, concluded\n16:00 A Moment's Peace, concluded\n17:10 Weapons of the Lodge, concluded\n18:20 Deadliest Game, concluded\n20:30 Redmaw\n39:00 Spearshafts Tallneck\n48:35 Cause for Concern - Farewell, concluded\n51:58 Datapoint: Observer Log US-W-20\n53:04 Map\n53:27 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191"
 thumbnail = "https://i.ytimg.com/vi/sUNE52OKP-A/maxresdefault.jpg"
+published = 2021-03-05T08:15:04Z
+video_id = "sUNE52OKP-A"
+origin = "youtube-gs"
+origin_link_text = "Game Shows channel"
+origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
+type = "video"
+description = "In Chapter 47, Aloy learns Talanah has gone after Redmaw alone.\n\n0:00 Opening titles\n0:21 Recap\n1:23 Onwards\n14:00 Honor the Fallen, concluded\n16:00 A Moment's Peace, concluded\n17:10 Weapons of the Lodge, concluded\n18:20 Deadliest Game, concluded\n20:30 Redmaw\n39:00 Spearshafts Tallneck\n48:35 Cause for Concern - Farewell, concluded\n51:58 Datapoint: Observer Log US-W-20\n53:04 Map\n53:27 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
 views = "7"
 likes = "0"
 dislikes = "0"
