Add tags to YouTube videos
They are found in the description, and from the channel name
(except where it is just my name, that's superflouous).

--- a/source/2010/07/17/devfort-cohort-4-prioritisation.toml
+++ b/source/2010/07/17/devfort-cohort-4-prioritisation.toml
@@ -5,10 +5,10 @@ origin = "youtube-mnf"
 origin_link_text = "Mark Norman Francis channel"
 origin_link_url = "https://www.youtube.com/channel/UChCfyxtJP1e4eO0v7L1CUJw"
 type = "video"
-description = "Grouping and prioritising ideas for the fourth devfort.com project. \r\n\r\nCreated with iTimeLapse.\n\n#devfort #devfort4"
+description = "Grouping and prioritising ideas for the fourth devfort.com project. \r\n\r\nCreated with iTimeLapse.\n\n"
 views = "237"
 likes = "0"
 dislikes = "1"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/mnDw_JPMkFM/default.jpg"
-tag = [ "devfort", "devfort4",]
+tag = [ "devfort", "devfort-4",]
