--- a/source/2010/07/19/devfort-cohort-4-last-day-of-coding.toml
+++ b/source/2010/07/19/devfort-cohort-4-last-day-of-coding.toml
@@ -5,10 +5,10 @@ origin = "youtube-mnf"
 origin_link_text = "Mark Norman Francis channel"
 origin_link_url = "https://www.youtube.com/channel/UChCfyxtJP1e4eO0v7L1CUJw"
 type = "video"
-description = "The last day of coding on the fourth devfort.com project. \r\n\r\nCreated with iTimeLapse.\n\n#devfort #devfort4"
+description = "The last day of coding on the fourth devfort.com project. \r\n\r\nCreated with iTimeLapse.\n\n"
 views = "974"
 likes = "3"
 dislikes = "3"
 comments = "1"
 thumbnail = "https://i.ytimg.com/vi/Oqpljgjs164/default.jpg"
-tag = [ "devfort", "devfort4",]
+tag = [ "devfort", "devfort-4",]
