--- a/source/2020/12/28/horizon-zero-dawn-chapter-28-shattered-kiln.toml
+++ b/source/2020/12/28/horizon-zero-dawn-chapter-28-shattered-kiln.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 28, Aloy deals with some criminals, and heads towards Maker's End.\n\n0:00 Opening titles\n0:22 Towards Meridian\n13:10 Fernund\n14:21 Towards Maker's End\n24:02 A conversation with the unknown caller\n25:04 Onward\n25:55 Shattered Kiln bandit camp\n42:51 Map\n43:17 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "In Chapter 28, Aloy deals with some criminals, and heads towards Maker's End.\n\n0:00 Opening titles\n0:22 Towards Meridian\n13:10 Fernund\n14:21 Towards Maker's End\n24:02 A conversation with the unknown caller\n25:04 Onward\n25:55 Shattered Kiln bandit camp\n42:51 Map\n43:17 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "9"
 likes = "0"
 dislikes = "0"
