--- a/source/2021/01/18/nathan-evans-wellerman-family-tree-shantytok-mashupsupercut.toml
+++ b/source/2021/01/18/nathan-evans-wellerman-family-tree-shantytok-mashupsupercut.toml
@@ -11,4 +11,4 @@ views = "3289968"
 likes = "58682"
 dislikes = "856"
 comments = "1562"
-tag = [ "shantytok", "mashup", "supercut",]
+tag = [ "shantytok", "mashup", "wellerman", "supercut",]
