--- a/source/2021/04/08/behind-the-scenes-horizon-zero-dawn-edits-in-the-sun-ring.toml
+++ b/source/2021/04/08/behind-the-scenes-horizon-zero-dawn-edits-in-the-sun-ring.toml
@@ -5,9 +5,10 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 54 of my Horizon Zero Dawn playthrough, I make some changes to cinematic sequences. Find the chapter at https://www.youtube.com/watch?v=xF2poDHo0hA\u200b\n\nIn this video I explain how and why I have made the changes.\n\n#HorizonZeroDawn #BehindTheScenes"
+description = "In Chapter 54 of my Horizon Zero Dawn playthrough, I make some changes to cinematic sequences. Find the chapter at https://www.youtube.com/watch?v=xF2poDHo0hA\u200b\n\nIn this video I explain how and why I have made the changes.\n\n"
 thumbnail = "https://i.ytimg.com/vi/t65w8tDQn-g/maxresdefault.jpg"
 views = "22"
 likes = "1"
 dislikes = "0"
 comments = "0"
+tag = [ "horizon-zero-dawn", "behind-the-scenes", "game-shows",]
