--- a/source/2021/05/07/assassins-creed-ii-chapter-6-pazzi-conspiracy-part-1.toml
+++ b/source/2021/05/07/assassins-creed-ii-chapter-6-pazzi-conspiracy-part-1.toml
@@ -5,9 +5,10 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 6, Ezio tracks down some of the Pazzi conspirators.\n\n0:00 Opening titles\n0:22 return to Monteriggioni\n2:50 Evasive Maneuvers\n6:00 onwards to San Gimignano\n12:10 Come Out and Play\n22:20 Glyph: Torre del Diavolo\n26:06 Glyph: Santa Maria Assunta\n29:40 Town Crier\n33:30 Glyph: Torri dei Salvucci\n37:24 Town Crier (concluded)\n48:03 Database entries\n50:27 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n#AssassinsCreedII #AssassinsCreed #EzioCollection"
+description = "In Chapter 6, Ezio tracks down some of the Pazzi conspirators.\n\n0:00 Opening titles\n0:22 return to Monteriggioni\n2:50 Evasive Maneuvers\n6:00 onwards to San Gimignano\n12:10 Come Out and Play\n22:20 Glyph: Torre del Diavolo\n26:06 Glyph: Santa Maria Assunta\n29:40 Town Crier\n33:30 Glyph: Torri dei Salvucci\n37:24 Town Crier (concluded)\n48:03 Database entries\n50:27 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n"
 thumbnail = "https://i.ytimg.com/vi/Z8Iv4MyPMuc/maxresdefault.jpg"
 views = "3"
 likes = "0"
 dislikes = "0"
 comments = "0"
+tag = [ "assassins-creed-ii", "assassins-creed", "ezio-collection", "game-shows",]
