--- a/source/2021/06/04/assassins-creed-ii-chapter-10-emilio-barbarigo.toml
+++ b/source/2021/06/04/assassins-creed-ii-chapter-10-emilio-barbarigo.toml
@@ -5,9 +5,10 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 10, Ezio deals with Emilio Barbarigo.\n\n0:00 Opening titles\n0:22 Clothes Make The Man\n12:35 Everything Must Go\n27:00 Birds Of A Feather\n36:40 a pitstop in Monteriggioni\n41:00 If At First You Don't Succeed\n54:25 database entries\n57:41 end card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n#AssassinsCreedII #AssassinsCreed #EzioCollection"
+description = "In Chapter 10, Ezio deals with Emilio Barbarigo.\n\n0:00 Opening titles\n0:22 Clothes Make The Man\n12:35 Everything Must Go\n27:00 Birds Of A Feather\n36:40 a pitstop in Monteriggioni\n41:00 If At First You Don't Succeed\n54:25 database entries\n57:41 end card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n"
 thumbnail = "https://i.ytimg.com/vi/9g4lOGFqV9w/default.jpg"
 views = "2"
 likes = "0"
 dislikes = "0"
 comments = "0"
+tag = [ "assassins-creed-ii", "assassins-creed", "ezio-collection", "game-shows",]
