--- a/source/2010/07/17/devfort-cohort-4-ideation.toml
+++ b/source/2010/07/17/devfort-cohort-4-ideation.toml
@@ -6,9 +6,9 @@ origin_link_text = "Mark Norman Francis channel"
 origin_link_url = "https://www.youtube.com/channel/UChCfyxtJP1e4eO0v7L1CUJw"
 type = "video"
 views = "176"
-description = "Coming up with ideas, features and suggestions for the fourth devfort.com project.\r\n\r\nCreated with iTimeLapse.\n\n#devfort #devfort4"
+description = "Coming up with ideas, features and suggestions for the fourth devfort.com project.\r\n\r\nCreated with iTimeLapse.\n\n"
 likes = "1"
 dislikes = "1"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/MwejLGvho5I/default.jpg"
-tag = [ "devfort", "devfort4",]
+tag = [ "devfort", "devfort-4",]
