--- a/source/2010/07/18/devfort-cohort-4-third-day-of-coding.toml
+++ b/source/2010/07/18/devfort-cohort-4-third-day-of-coding.toml
@@ -5,10 +5,10 @@ origin = "youtube-mnf"
 origin_link_text = "Mark Norman Francis channel"
 origin_link_url = "https://www.youtube.com/channel/UChCfyxtJP1e4eO0v7L1CUJw"
 type = "video"
-description = "The third day of coding on the fourth devfort.com project. \r\n\r\nCreated with iTimeLapse.\n\n#devfort #devfort4"
+description = "The third day of coding on the fourth devfort.com project. \r\n\r\nCreated with iTimeLapse.\n\n"
 views = "104"
 likes = "0"
 dislikes = "1"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/zw5l3iVltwE/default.jpg"
-tag = [ "devfort", "devfort4",]
+tag = [ "devfort", "devfort-4",]
