--- a/source/2010/07/19/devfort-cohort-4-fourth-day-of-coding.toml
+++ b/source/2010/07/19/devfort-cohort-4-fourth-day-of-coding.toml
@@ -5,10 +5,10 @@ origin = "youtube-mnf"
 origin_link_text = "Mark Norman Francis channel"
 origin_link_url = "https://www.youtube.com/channel/UChCfyxtJP1e4eO0v7L1CUJw"
 type = "video"
-description = "The fourth day of coding on the fourth devfort.com project.\r\n\r\nCreated with iTimeLapse.\n\n#devfort #devfort4"
+description = "The fourth day of coding on the fourth devfort.com project.\r\n\r\nCreated with iTimeLapse.\n\n"
 views = "266"
 likes = "1"
 dislikes = "2"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/sYkxaCQ9Fp8/default.jpg"
-tag = [ "devfort", "devfort4",]
+tag = [ "devfort", "devfort-4",]
