--- a/source/2020/09/28/horizon-zero-dawn-chapter-3-the-embrace.toml
+++ b/source/2020/09/28/horizon-zero-dawn-chapter-3-the-embrace.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 3 Aloy spends a day in the Embrace, and helps some people.\n\n00:00 Opening titles\n00:21 Recap\n00:44 Last day as an outcast\n05:57 The Forgotten\n25:08 Towards Mother's Heart\n28:43 In Her Mother's Footsteps\n50:30 Map\n50:49 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 3 Aloy spends a day in the Embrace, and helps some people.\n\n00:00 Opening titles\n00:21 Recap\n00:44 Last day as an outcast\n05:57 The Forgotten\n25:08 Towards Mother's Heart\n28:43 In Her Mother's Footsteps\n50:30 Map\n50:49 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "57"
 likes = "2"
 dislikes = "0"
