--- a/source/2020/10/02/horizon-zero-dawn-chapter-4-the-proving.toml
+++ b/source/2020/10/02/horizon-zero-dawn-chapter-4-the-proving.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 4 Aloy attends the Proving, hoping to win to gain some answers from the Matriarchs.\n\n00:00 Opening titles\n00:21 Recap\n01:15 Mother's Heart\n47:17 The Proving\n1:00:37 Map\n1:00:58 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 4 Aloy attends the Proving, hoping to win to gain some answers from the Matriarchs.\n\n00:00 Opening titles\n00:21 Recap\n01:15 Mother's Heart\n47:17 The Proving\n1:00:37 Map\n1:00:58 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "53"
 likes = "5"
 dislikes = "0"
