--- a/source/2020/10/05/horizon-zero-dawn-chapter-5-corruption.toml
+++ b/source/2020/10/05/horizon-zero-dawn-chapter-5-corruption.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 5 Aloy learns something about her mother, and prepares to leave Nora lands.\n\n00:00 Opening titles\n00:21 Recap\n00:44 The Womb of the Mountain\n32:09 It's not home anymore\n40:09 A Seeker at the Gates\n49:25 Map\n49:43 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 5 Aloy learns something about her mother, and prepares to leave Nora lands.\n\n00:00 Opening titles\n00:21 Recap\n00:44 The Womb of the Mountain\n32:09 It's not home anymore\n40:09 A Seeker at the Gates\n49:25 Map\n49:43 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "50"
 likes = "4"
 dislikes = "0"
