--- a/source/2020/10/12/horizon-zero-dawn-chapter-7-outcasts.toml
+++ b/source/2020/10/12/horizon-zero-dawn-chapter-7-outcasts.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 7, Aloy defends a gang of outcasts.\n\n00:00 Opening titles\n00:21 Recap\n00:54 Insult to Injury\n30:08 To Mother's Crown\n38:40 Mother's Crown\n48:18 To Red Echoes\n52:46 Map\n53:05 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 7, Aloy defends a gang of outcasts.\n\n00:00 Opening titles\n00:21 Recap\n00:54 Insult to Injury\n30:08 To Mother's Crown\n38:40 Mother's Crown\n48:18 To Red Echoes\n52:46 Map\n53:05 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "35"
 likes = "3"
 dislikes = "0"
