--- a/source/2020/10/16/horizon-zero-dawn-chapter-8-the-ring-of-metal.toml
+++ b/source/2020/10/16/horizon-zero-dawn-chapter-8-the-ring-of-metal.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 8, the Nora attack the Cultists in the Ring of Metal.\n\n00:00 Opening titles\n00:21 Recap\n00:52 Revenge of the Nora\n36:39 Back to Red Echoes\n47:57 Corrupted Zone\n1:00:48 Map\n1:01:08 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 8, the Nora attack the Cultists in the Ring of Metal.\n\n00:00 Opening titles\n00:21 Recap\n00:52 Revenge of the Nora\n36:39 Back to Red Echoes\n47:57 Corrupted Zone\n1:00:48 Map\n1:01:08 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "29"
 likes = "3"
 dislikes = "0"
