--- a/source/2020/10/23/horizon-zero-dawn-chapter-10-heading-west.toml
+++ b/source/2020/10/23/horizon-zero-dawn-chapter-10-heading-west.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 10, Aloy heads from the Cauldron to Daytower, the Carja fort.\n\n00:00 Opening titles\n00:21 Heading to Hunter's Gathering\n11:35 Underequipped\n32:03 Heading to Daytower\n1:00:09 Map\n1:00:27 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 10, Aloy heads from the Cauldron to Daytower, the Carja fort.\n\n00:00 Opening titles\n00:21 Heading to Hunter's Gathering\n11:35 Underequipped\n32:03 Heading to Daytower\n1:00:09 Map\n1:00:27 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "30"
 likes = "3"
 dislikes = "0"
