--- a/source/2020/10/30/horizon-zero-dawn-chapter-12-daytower.toml
+++ b/source/2020/10/30/horizon-zero-dawn-chapter-12-daytower.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 12, Aloy explores Daytower and learns more about Nakoa and the Carja Sundom.\n\n0:00 Opening titles\n0:21 A Seeker at the Gates\n09:20 In Foreign Lands\n34:45 Daytower\n43:00 A conversation with Zaid\n47:30 Leaving Daytower for Meridian\n49:06 Datapoint: Reiker Building?\n49:57 Datapoint: The Claim\n54:12 Datapoint: The Derangement\n57:20 Map\n57:37 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "In Chapter 12, Aloy explores Daytower and learns more about Nakoa and the Carja Sundom.\n\n0:00 Opening titles\n0:21 A Seeker at the Gates\n09:20 In Foreign Lands\n34:45 Daytower\n43:00 A conversation with Zaid\n47:30 Leaving Daytower for Meridian\n49:06 Datapoint: Reiker Building?\n49:57 Datapoint: The Claim\n54:12 Datapoint: The Derangement\n57:20 Map\n57:37 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "31"
 likes = "1"
 dislikes = "0"
