--- a/source/2020/11/02/horizon-zero-dawn-chapter-13-way-of-broken-stones.toml
+++ b/source/2020/11/02/horizon-zero-dawn-chapter-13-way-of-broken-stones.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 13, Aloy makes her way to Meridian.\n\n0:00 Opening titles\n0:21 Recap\n0:47 Way of Broken Stones\n23:42 Meridian\n29:00 Olin's apartment\n36:26 The Hunters Lodge\n47:53 Datapoint: Record of Redmaw 1\n52:55 Datapoint: Olin's Journal\n55:26 Map\n55:45 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "In Chapter 13, Aloy makes her way to Meridian.\n\n0:00 Opening titles\n0:21 Recap\n0:47 Way of Broken Stones\n23:42 Meridian\n29:00 Olin's apartment\n36:26 The Hunters Lodge\n47:53 Datapoint: Record of Redmaw 1\n52:55 Datapoint: Olin's Journal\n55:26 Map\n55:45 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "53"
 likes = "1"
 dislikes = "0"
