--- a/source/2020/11/06/horizon-zero-dawn-chapter-14-hunting.toml
+++ b/source/2020/11/06/horizon-zero-dawn-chapter-14-hunting.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 14, Aloy goes hunting for some trophies.\n\n0:00 Opening titles\n0:21 Recap\n0:42 Leaving Meridian\n8:05 Hunting for the Lodge: Stalker trophy\n22:35 Onwards\n26:12 Hunting for the Lodge: Sawtooth trophies\n41:00 Onwards\n49:00 A Daughter's Vengeance\n1:03:11 Map\n1:03:29 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "In Chapter 14, Aloy goes hunting for some trophies.\n\n0:00 Opening titles\n0:21 Recap\n0:42 Leaving Meridian\n8:05 Hunting for the Lodge: Stalker trophy\n22:35 Onwards\n26:12 Hunting for the Lodge: Sawtooth trophies\n41:00 Onwards\n49:00 A Daughter's Vengeance\n1:03:11 Map\n1:03:29 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "16"
 likes = "1"
 dislikes = "0"
