--- a/source/2020/12/04/horizon-zero-dawn-chapter-22-dervahl.toml
+++ b/source/2020/12/04/horizon-zero-dawn-chapter-22-dervahl.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 22, Aloy defends Meridian from Dervahl.\n\n0:00 Opening titles\n0:21 Recap\n1:10 Hunters Lodge\n14:55 The Sun Shall Fall\n47:53 Map\n48:11 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "In Chapter 22, Aloy defends Meridian from Dervahl.\n\n0:00 Opening titles\n0:21 Recap\n1:10 Hunters Lodge\n14:55 The Sun Shall Fall\n47:53 Map\n48:11 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "11"
 likes = "0"
 dislikes = "0"
