--- a/source/2020/12/14/horizon-zero-dawn-chapter-25-divided.toml
+++ b/source/2020/12/14/horizon-zero-dawn-chapter-25-divided.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 25, Aloy ventures into Shadow Carja territory.\n\n0:00 Opening titles\n0:21 To Brightmarket\n1:25 Meeting Fernund\n4:05 Sun and Shadow\n36:00 Onward, towards Dusk Mesa\n44:32 Map\n44:50 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "In Chapter 25, Aloy ventures into Shadow Carja territory.\n\n0:00 Opening titles\n0:21 To Brightmarket\n1:25 Meeting Fernund\n4:05 Sun and Shadow\n36:00 Onward, towards Dusk Mesa\n44:32 Map\n44:50 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "5"
 likes = "0"
 dislikes = "0"
