--- a/source/2020/12/18/horizon-zero-dawn-chapter-26-dusk-mesa.toml
+++ b/source/2020/12/18/horizon-zero-dawn-chapter-26-dusk-mesa.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 26, Aloy cleans up Dusk Mesa.\n\n0:00 Opening titles\n0:21 Recap\n1:17 Corrupted Zone\n8:50 Stalkers\n21:40 A Curious Proposal\n26:00 Onwards\n29:30 Sunstone Rock: Completed\n34:50 Vantage: Monument Valley\n37:10 Onwards\n40:10 Cauldron Xi entrance\n46:22 Map\n46:40 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "In Chapter 26, Aloy cleans up Dusk Mesa.\n\n0:00 Opening titles\n0:21 Recap\n1:17 Corrupted Zone\n8:50 Stalkers\n21:40 A Curious Proposal\n26:00 Onwards\n29:30 Sunstone Rock: Completed\n34:50 Vantage: Monument Valley\n37:10 Onwards\n40:10 Cauldron Xi entrance\n46:22 Map\n46:40 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "18"
 likes = "0"
 dislikes = "0"
