--- a/source/2021/01/01/horizon-zero-dawn-chapter-29-makers-end.toml
+++ b/source/2021/01/01/horizon-zero-dawn-chapter-29-makers-end.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 29, Aloy heads into Maker's End to find out about Elisabet Sobeck.\n\n0:00 Opening titles\n0:21 Recap\n1:10 Behemoths\n9:00 Into Maker's End\n15:01 Vantage: Maker's End\n22:00 Maker's End dig sites\n51:04 Datapoint: Odyssey injustice?\n52:55 Datapoint: Odyssey Drives Ready\n53:48 Datapoint: Odyssey to Nowhere\n54:51 Map\n55:09 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "In Chapter 29, Aloy heads into Maker's End to find out about Elisabet Sobeck.\n\n0:00 Opening titles\n0:21 Recap\n1:10 Behemoths\n9:00 Into Maker's End\n15:01 Vantage: Maker's End\n22:00 Maker's End dig sites\n51:04 Datapoint: Odyssey injustice?\n52:55 Datapoint: Odyssey Drives Ready\n53:48 Datapoint: Odyssey to Nowhere\n54:51 Map\n55:09 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "13"
 likes = "1"
 dislikes = "0"
