--- a/source/2021/01/22/horizon-zero-dawn-chapter-35-deep-din.toml
+++ b/source/2021/01/22/horizon-zero-dawn-chapter-35-deep-din.toml
@@ -6,7 +6,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 35, Aloy finds the source of the floodwaters affecting Deep Din.\n\n0:00 Opening titles\n0:21 Recap\n0:59 Waterlogged\n53:27 Datapoint: Compensatory Damages\n55:24 Datapoint: Farewell Tour\n56:43 Datapoint: Final Performance\n59:05 Map\n59:23 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "In Chapter 35, Aloy finds the source of the floodwaters affecting Deep Din.\n\n0:00 Opening titles\n0:21 Recap\n0:59 Waterlogged\n53:27 Datapoint: Compensatory Damages\n55:24 Datapoint: Farewell Tour\n56:43 Datapoint: Final Performance\n59:05 Map\n59:23 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 likes = "0"
 dislikes = "0"
 comments = "0"
