--- a/source/2021/02/05/horizon-zero-dawn-chapter-39-for-the-werak.toml
+++ b/source/2021/02/05/horizon-zero-dawn-chapter-39-for-the-werak.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 39, Aloy challenges Aratak for the position of chieftain of his werak.\n\n0:00 Opening titles\n0:21 Recap\n1:18 Onwards\n12:21 A Secret Shared completed\n15:10 Gildun\n15:42 The legend of Banukai\n19:18 Sekuli\n24:18 For the werak\n52:27 Map\n52:53 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "In Chapter 39, Aloy challenges Aratak for the position of chieftain of his werak.\n\n0:00 Opening titles\n0:21 Recap\n1:18 Onwards\n12:21 A Secret Shared completed\n15:10 Gildun\n15:42 The legend of Banukai\n19:18 Sekuli\n24:18 For the werak\n52:27 Map\n52:53 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "14"
 likes = "1"
 dislikes = "0"
