--- a/source/2021/02/15/horizon-zero-dawn-chapter-42-cyan.toml
+++ b/source/2021/02/15/horizon-zero-dawn-chapter-42-cyan.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 42, Aloy talks to CYAN and comes across a man accused of murder.\n\n0:00 Opening titles\n0:21 The Forge of Winter, concluded\n30:20 Onwards\n42:02 Frontier Justice\n57:22 Map\n57:45 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "In Chapter 42, Aloy talks to CYAN and comes across a man accused of murder.\n\n0:00 Opening titles\n0:21 The Forge of Winter, concluded\n30:20 Onwards\n42:02 Frontier Justice\n57:22 Map\n57:45 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "19"
 likes = "0"
 dislikes = "0"
