--- a/source/2021/02/22/horizon-zero-dawn-chapter-44-stormbird.toml
+++ b/source/2021/02/22/horizon-zero-dawn-chapter-44-stormbird.toml
@@ -5,7 +5,7 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 44, Aloy fits the power cells into the Bunker door lock, then goes to find Varga and hunt a Stormbird.\n\n0:00 Opening titles\n0:21 Recap\n1:25 Onwards, to the south\n5:30 Ancient Armory, continued\n10:20 Onwards, toward The Embrace\n16:33 Visiting Rost's grave\n20:08 Onwards, to the Sundom\n35:35 Geared Up\n52:45 Map\n53:15 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n#HorizonZeroDawn"
+description = "In Chapter 44, Aloy fits the power cells into the Bunker door lock, then goes to find Varga and hunt a Stormbird.\n\n0:00 Opening titles\n0:21 Recap\n1:25 Onwards, to the south\n5:30 Ancient Armory, continued\n10:20 Onwards, toward The Embrace\n16:33 Visiting Rost's grave\n20:08 Onwards, to the Sundom\n35:35 Geared Up\n52:45 Map\n53:15 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "20"
 likes = "0"
 dislikes = "0"
