--- a/source/2021/04/16/assassins-creed-ii-chapter-3-the-deed.toml
+++ b/source/2021/04/16/assassins-creed-ii-chapter-3-the-deed.toml
@@ -5,9 +5,10 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 3, Ezio takes care of business.\n\n0:00 Opening titles\n0:22 Onwards\n4:00 Judge, Jury, Executioner\n19:00 Laying Low\n21:30 Arrivederci\n28:20 Roadside Assistance\n32:50 Casa Dolce Casa\n41:45 Practice Makes Perfect\n50:50 Onwards\n54:19 Database entries\n56:25 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n#AssassinsCreedII #AssassinsCreed #EzioCollection"
+description = "In Chapter 3, Ezio takes care of business.\n\n0:00 Opening titles\n0:22 Onwards\n4:00 Judge, Jury, Executioner\n19:00 Laying Low\n21:30 Arrivederci\n28:20 Roadside Assistance\n32:50 Casa Dolce Casa\n41:45 Practice Makes Perfect\n50:50 Onwards\n54:19 Database entries\n56:25 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n"
 thumbnail = "https://i.ytimg.com/vi/Fv6oLwsWrJQ/default.jpg"
 views = "4"
 likes = "0"
 dislikes = "0"
 comments = "0"
+tag = [ "assassins-creed-ii", "assassins-creed", "ezio-collection", "game-shows",]
