--- a/source/2021/05/21/assassins-creed-ii-chapter-8-venezia.toml
+++ b/source/2021/05/21/assassins-creed-ii-chapter-8-venezia.toml
@@ -5,9 +5,10 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 8, Ezio travels to Venice.\n\n0:00 Opening titles\n0:22 exploring Forlì\n8:05 Tutti A Bordo\n12:22 skill retention\n25:45 dream: Altaïr and Maria\n31:43 Benvenuto\n39:30 That's Gonna Leave A Mark\n52:10 Building Blocks\n53:50 database entries\n1:03:25 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n#AssassinsCreedII #AssassinsCreed #EzioCollection"
+description = "In Chapter 8, Ezio travels to Venice.\n\n0:00 Opening titles\n0:22 exploring Forlì\n8:05 Tutti A Bordo\n12:22 skill retention\n25:45 dream: Altaïr and Maria\n31:43 Benvenuto\n39:30 That's Gonna Leave A Mark\n52:10 Building Blocks\n53:50 database entries\n1:03:25 End card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n"
 thumbnail = "https://i.ytimg.com/vi/7andCXrI_y8/maxresdefault.jpg"
 views = "4"
 likes = "0"
 dislikes = "0"
 comments = "0"
+tag = [ "assassins-creed-ii", "assassins-creed", "ezio-collection", "game-shows",]
