--- a/source/2021/05/28/assassins-creed-ii-chapter-9-among-thieves.toml
+++ b/source/2021/05/28/assassins-creed-ii-chapter-9-among-thieves.toml
@@ -5,9 +5,10 @@ origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
-description = "In Chapter 9, Ezio learns to climb better, and deals with some troublesome thieves.\n\n0:00 Opening titles\n0:22 restocking\n3:30 Monkey See, Monkey Do\n6:06 Cleaning House\n14:50 Glyph: San Giacomo di Rialto\n20:20 Glyph: Ponte di Rialto\n26:30 By Leaps And Bounds\n29:40 Breakout\n46:44 codex pages\n50:50 a pitstop in Monteriggioni\n55:44 database entries\n56:56 end card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n#AssassinsCreedII #AssassinsCreed #EzioCollection"
+description = "In Chapter 9, Ezio learns to climb better, and deals with some troublesome thieves.\n\n0:00 Opening titles\n0:22 restocking\n3:30 Monkey See, Monkey Do\n6:06 Cleaning House\n14:50 Glyph: San Giacomo di Rialto\n20:20 Glyph: Ponte di Rialto\n26:30 By Leaps And Bounds\n29:40 Breakout\n46:44 codex pages\n50:50 a pitstop in Monteriggioni\n55:44 database entries\n56:56 end card\n\nA play through of the game Assassin's Creed II. All of the main story, some of the side missions. No tedious commentary.\n\n"
 thumbnail = "https://i.ytimg.com/vi/jNucid-hGz0/default.jpg"
 views = "6"
 likes = "0"
 dislikes = "0"
 comments = "0"
+tag = [ "assassins-creed-ii", "assassins-creed", "ezio-collection", "game-shows",]
