Add 'theme' to videos from a thematic channel

--- a/source/2020/09/24/horizon-zero-dawn-chapter-1-aloy.toml
+++ b/source/2020/09/24/horizon-zero-dawn-chapter-1-aloy.toml
@@ -12,3 +12,4 @@ dislikes = "3"
 comments = "5"
 thumbnail = "https://i.ytimg.com/vi/KW9a_XOhBRs/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
