--- a/source/2020/10/05/horizon-zero-dawn-chapter-5-corruption.toml
+++ b/source/2020/10/05/horizon-zero-dawn-chapter-5-corruption.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "2"
 thumbnail = "https://i.ytimg.com/vi/4cuE6pNeqNs/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
