--- a/source/2020/11/13/horizon-zero-dawn-chapter-16-holy-meridian.toml
+++ b/source/2020/11/13/horizon-zero-dawn-chapter-16-holy-meridian.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/1WkcAeld60Y/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
