--- a/source/2021/01/22/horizon-zero-dawn-chapter-35-deep-din.toml
+++ b/source/2021/01/22/horizon-zero-dawn-chapter-35-deep-din.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/rsWc2w7Dd6s/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
