--- a/source/2021/02/12/horizon-zero-dawn-chapter-41-epsilon.toml
+++ b/source/2021/02/12/horizon-zero-dawn-chapter-41-epsilon.toml
@@ -12,3 +12,4 @@ dislikes = "1"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/chnnTYEfGiA/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
