--- a/source/2021/04/08/behind-the-scenes-horizon-zero-dawn-edits-in-the-sun-ring.toml
+++ b/source/2021/04/08/behind-the-scenes-horizon-zero-dawn-edits-in-the-sun-ring.toml
@@ -12,3 +12,4 @@ likes = "1"
 dislikes = "0"
 comments = "0"
 tag = [ "horizon-zero-dawn", "behind-the-scenes", "game-shows",]
+theme = "game-shows"
