--- a/source/2020/09/28/horizon-zero-dawn-chapter-3-the-embrace.toml
+++ b/source/2020/09/28/horizon-zero-dawn-chapter-3-the-embrace.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "1"
 thumbnail = "https://i.ytimg.com/vi/fwY8UWzm4ug/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
