--- a/source/2020/10/02/horizon-zero-dawn-chapter-4-the-proving.toml
+++ b/source/2020/10/02/horizon-zero-dawn-chapter-4-the-proving.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "1"
 thumbnail = "https://i.ytimg.com/vi/NrRYFFW2obY/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
