--- a/source/2020/10/12/horizon-zero-dawn-chapter-7-outcasts.toml
+++ b/source/2020/10/12/horizon-zero-dawn-chapter-7-outcasts.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "1"
 thumbnail = "https://i.ytimg.com/vi/mUbfI71cQZ0/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
