--- a/source/2020/10/23/horizon-zero-dawn-chapter-10-heading-west.toml
+++ b/source/2020/10/23/horizon-zero-dawn-chapter-10-heading-west.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/7Sr4wgFOAEM/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
