--- a/source/2020/11/02/horizon-zero-dawn-chapter-13-way-of-broken-stones.toml
+++ b/source/2020/11/02/horizon-zero-dawn-chapter-13-way-of-broken-stones.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/hbcX_CS4rVs/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
