--- a/source/2020/11/09/horizon-zero-dawn-chapter-15-unearthed.toml
+++ b/source/2020/11/09/horizon-zero-dawn-chapter-15-unearthed.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/j2KuYSTBqPM/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
