--- a/source/2020/11/23/horizon-zero-dawn-chapter-19-lone-light.toml
+++ b/source/2020/11/23/horizon-zero-dawn-chapter-19-lone-light.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/rfVO6xnt12c/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
