--- a/source/2020/11/27/horizon-zero-dawn-chapter-20-blood.toml
+++ b/source/2020/11/27/horizon-zero-dawn-chapter-20-blood.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/tACqg9R53A0/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
