--- a/source/2020/12/11/horizon-zero-dawn-chapter-24-prisoners.toml
+++ b/source/2020/12/11/horizon-zero-dawn-chapter-24-prisoners.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/6F11Ua8RcW8/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
