--- a/source/2020/12/18/horizon-zero-dawn-chapter-26-dusk-mesa.toml
+++ b/source/2020/12/18/horizon-zero-dawn-chapter-26-dusk-mesa.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/Ip3ZrAiSQT4/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
