--- a/source/2020/12/21/horizon-zero-dawn-chapter-27-xi.toml
+++ b/source/2020/12/21/horizon-zero-dawn-chapter-27-xi.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/fUXBS-aVJ0A/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
