--- a/source/2021/01/15/horizon-zero-dawn-chapter-33-grave-hoard.toml
+++ b/source/2021/01/15/horizon-zero-dawn-chapter-33-grave-hoard.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/3u2gsqa1W8E/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
