--- a/source/2021/01/25/horizon-zero-dawn-chapter-36-shamans-path.toml
+++ b/source/2021/01/25/horizon-zero-dawn-chapter-36-shamans-path.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/65wXFIU2nko/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
