--- a/source/2021/02/05/horizon-zero-dawn-chapter-39-for-the-werak.toml
+++ b/source/2021/02/05/horizon-zero-dawn-chapter-39-for-the-werak.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "3"
 thumbnail = "https://i.ytimg.com/vi/VyZAsw_Y0jg/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
