--- a/source/2021/02/26/horizon-zero-dawn-chapter-45-free-heap.toml
+++ b/source/2021/02/26/horizon-zero-dawn-chapter-45-free-heap.toml
@@ -12,3 +12,4 @@ dislikes = "0"
 comments = "0"
 thumbnail = "https://i.ytimg.com/vi/CLKno6rULwg/maxresdefault.jpg"
 tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
