--- a/source/2021/04/16/assassins-creed-ii-chapter-3-the-deed.toml
+++ b/source/2021/04/16/assassins-creed-ii-chapter-3-the-deed.toml
@@ -12,3 +12,4 @@ likes = "0"
 dislikes = "0"
 comments = "0"
 tag = [ "assassins-creed-ii", "assassins-creed", "ezio-collection", "game-shows",]
+theme = "game-shows"
