--- a/source/2021/04/30/assassins-creed-ii-chapter-5-franceso-de-pazzi.toml
+++ b/source/2021/04/30/assassins-creed-ii-chapter-5-franceso-de-pazzi.toml
@@ -12,3 +12,4 @@ likes = "0"
 dislikes = "0"
 comments = "0"
 tag = [ "assassins-creed-ii", "assassins-creed", "ezio-collection", "game-shows",]
+theme = "game-shows"
