--- a/source/2021/05/07/assassins-creed-ii-chapter-6-pazzi-conspiracy-part-1.toml
+++ b/source/2021/05/07/assassins-creed-ii-chapter-6-pazzi-conspiracy-part-1.toml
@@ -12,3 +12,4 @@ likes = "0"
 dislikes = "0"
 comments = "0"
 tag = [ "assassins-creed-ii", "assassins-creed", "ezio-collection", "game-shows",]
+theme = "game-shows"
