--- a/source/2016/05/14/eight-litres-of-punch-for-the-first-half-of.toml
+++ b/source/2016/05/14/eight-litres-of-punch-for-the-first-half-of.toml
@@ -1,4 +1,4 @@
-title = "Eight litres of punch for the first half of"
+title = "Eight litres of punch for the first half of Eurovision!"
 published = 2016-05-14T18:21:25Z
 image = "https://mnf.m17s.net/2016/05/14/eight-litres-of-punch-for-the-first-half-of.jpg"
 origin = "instagram"
