--- a/source/2015/04/10/whiteboard-tache.toml
+++ b/source/2015/04/10/whiteboard-tache.toml
@@ -1,5 +1,5 @@
 published = 2015-04-10T13:09:14Z
 title = "Whiteboard 'tache"
 image = "https://mnf.m17s.net/2015/04/10/image.jpg"
-type = "instagram"
-source = "instagram"
+origin = "instagram"
+type = "photo"
