--- a/source/2016/04/05/adding-some-pins-to-my-work-bag-courtesy-of-veronicadearly-and-fairy_cakes_.toml
+++ b/source/2016/04/05/adding-some-pins-to-my-work-bag-courtesy-of-veronicadearly-and-fairy_cakes_.toml
@@ -1,5 +1,5 @@
 published = 2016-04-05T14:27:55Z
 title = "Adding some pins to my work bag, courtesy of @veronicadearly and @fairy_cakes_"
 image = "https://mnf.m17s.net/2016/04/05/adding-some-pins-to-my-work-bag-courtesy-of-veronicadearly-and-fairy_cakes_.jpg"
-type = "instagram"
-source = "instagram"
+origin = "instagram"
+type = "photo"
