--- a/source/2016/12/01/scapa-glansa.toml
+++ b/source/2016/12/01/scapa-glansa.toml
@@ -1,5 +1,6 @@
 published = 2016-12-01T18:50:21Z
 title = "Scapa Glansa"
 image = "https://mnf.m17s.net/2016/12/01/image.jpg"
-type = "instagram"
-source = "instagram"
+origin = "instagram"
+type = "photo"
+tag = ["boozecase",]
