Import old content from the CouchDB backup
The previous iteration of this site used a older version of Flourish
that ran live and heavily used a CouchDB database.

--- a/fragments/dimensions.toml
+++ b/fragments/dimensions.toml
@@ -6,6 +6,7 @@ day-index = 'calendar'
 
 [origin]
 # where did the content come from?
+mnf-v1 = 'mnf'
 twitter-cackhanded = 'twitter'
 twitter-norms_ps4 = 'twitter'
 youtube-gs = 'youtube'      # my 'Game Shows' channel
